automation/kubernetes/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-portal-py-ing
  namespace: www
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    cert-manager.io/cluster-issuer: "letsencrypt-www-dev"
spec:
  rules:
  - host: app.dev.mathstronautsportal.ca
    http:
      paths:
      - pathType: Prefix
        path: "/sample-portal-py"
        backend:
          service:
            name: sample-portal-py
            port:
              number: 80
  tls:
  - hosts:
    - app.dev.mathstronautsportal.ca
    secretName: letesncrypt-www-dev
